[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/Axis/heinkel.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Quiz.gd" type="Script" id=2]

[node name="Quiz" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -544.0
margin_top = -381.0
margin_right = -544.0
margin_bottom = -381.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ButtonCenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -42.0
margin_right = 124.0
margin_bottom = -2.0

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonCenterContainer"]
margin_left = 27.0
margin_top = 10.0
margin_right = 152.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( -321, -184 )

[node name="FriendlyButton" type="Button" parent="ButtonCenterContainer/HBoxContainer"]
margin_right = 63.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -446, -258 )
text = "Friendly"

[node name="EnemyButton" type="Button" parent="ButtonCenterContainer/HBoxContainer"]
margin_left = 67.0
margin_right = 125.0
margin_bottom = 20.0
text = "Hostile"

[node name="ImageCenterContainer" type="CenterContainer" parent="."]
margin_right = 1023.0
margin_bottom = 605.0

[node name="PlaneSprite" type="Sprite" parent="ImageCenterContainer"]
position = Vector2( 548, 341 )
texture = ExtResource( 1 )

[node name="AircraftName" type="Label" parent="ImageCenterContainer/PlaneSprite"]
margin_left = -85.0
margin_top = 173.0
margin_right = 87.0
margin_bottom = 198.0
text = "TEST MF"
align = 1
valign = 1
